Run Rubocop and Profile CI on CI build once
We would like to run Rubocop linting against the minimum supported Ruby
version, that is 2.5. Profile and warnings will be run against the
latest version of Ruby 3.1 so we can preempt upcoming issues.

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -3,42 +3,61 @@ name: CI
 on:
   push:
     # The `github-workflow-test` can be used to test changes without making a PR
-    branches: [ master, github-workflow-test ]
+    branches: [master, github-workflow-test]
   pull_request:
-    branches: [ master ]
+    branches: [master]
 
 jobs:
   linelint:
     name: Linelint
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - uses: fernandrone/linelint@master
+      - uses: actions/checkout@v2
+      - uses: fernandrone/linelint@master
+
+  rubocop:
+    name: RuboCop
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: "2.5"
+          bundler-cache: true
+      - name: Run RuboCop
+        run: bundle exec rake check:style
 
   test:
+    name: Test ${{ matrix.ruby-version }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby-version: [ '2.5', '2.6', '2.7', '3.0', '3.1']
+        ruby-version: ["2.5", "2.6", "2.7", "3.0", "3.1"]
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Ruby
-      uses: ruby/setup-ruby@v1
-      with:
-        ruby-version: ${{ matrix.ruby-version }}
-        # runs 'bundle install' and caches installed gems automatically
-        bundler-cache: true
-    - name: Run tests
-      run: bundle exec rake
+      - uses: actions/checkout@v2
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: ${{ matrix.ruby-version }}
+          bundler-cache: true
+      - name: Run tests
+        run: bundle exec rake check:specs
 
-    # Those are only run with the latest supported version
-    # Make sure to update the `if` when changing supported versions
-    - name: Profile Memory Allocation
-      if: matrix.ruby-version == '3.1'
-      run: bundle exec rake check:memory
-    - name: Interpreter Warnings Test
-      if: matrix.ruby-version == '3.1'
-      env:
-        RUBYOPT: '-w'
-      run: bundle exec rake check:specs
+  profile:
+    name: Profile
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: "3.1"
+          bundler-cache: true
+      - name: Profile Memory Allocation
+        run: bundle exec rake check:memory
+      - name: Interpreter Warnings Test
+        env:
+          RUBYOPT: "-w"
+        run: bundle exec rake check:specs
