--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,6 +3,7 @@ inherit_from: .rubocop_todo.yml
 AllCops:
   TargetRubyVersion: 2.5
   DisplayCopNames: true
+  NewCops: enable
   Exclude:
     - "tasks/**/*"
     - "vendor/**/*"
