--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: "2.5"
+          ruby-version: "2.7"
           bundler-cache: true
       - name: Run RuboCop
         run: bundle exec rake check:style
@@ -33,7 +33,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby-version: ["2.5", "2.6", "2.7", "3.0", "3.1"]
+        ruby-version: ["2.7", "3.0", "3.1"]
 
     steps:
       - uses: actions/checkout@v2
