--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -1,3 +1,4 @@
+---
 name: CI
 
 on:
@@ -33,7 +34,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby-version: ["2.7", "3.0", "3.1"]
+        ruby-version: ["2.7", "3.0", "3.1", "3.2"]
 
     steps:
       - uses: actions/checkout@v3
@@ -53,7 +54,7 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: "3.1"
+          ruby-version: "3.2"
           bundler-cache: true
       - name: Profile Memory Allocation
         run: bundle exec rake check:memory
