Drop support for Ruby < 3.2
With Ruby 2.7 and 3.1 being EOL, we should drop support for old versions
to reduce Rouge gem maintenance effort.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,11 +1,11 @@
 inherit_from: .rubocop_todo.yml
 
 AllCops:
-  TargetRubyVersion: 2.7
   DisplayCopNames: true
   Exclude:
     - "tasks/**/*"
     - "vendor/**/*"
+  NewCops: enable
 
 Style:
   Enabled: false
