--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -34,7 +34,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby-version: ["2.7", "3.0", "3.1", "3.2", "3.3", "3.4"]
+        ruby-version: ["2.7", "3.0", "3.1", "3.2", "3.3", "3.4", "head"]
 
     steps:
       - uses: actions/checkout@v4
