--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -190,3 +190,50 @@ Performance/UnfreezeString:
 Rake/Desc:
   Exclude:
     - 'Rakefile'
+
+# Offense count: 119
+Rouge/NoBuildingAlternationPatternInRegexp:
+  Exclude:
+    - 'lib/rouge/lexers/apple_script.rb'
+    - 'lib/rouge/lexers/armasm.rb'
+    - 'lib/rouge/lexers/bbcbasic.rb'
+    - 'lib/rouge/lexers/bicep.rb'
+    - 'lib/rouge/lexers/cfscript.rb'
+    - 'lib/rouge/lexers/cmhg.rb'
+    - 'lib/rouge/lexers/console.rb'
+    - 'lib/rouge/lexers/crystal.rb'
+    - 'lib/rouge/lexers/csharp.rb'
+    - 'lib/rouge/lexers/d.rb'
+    - 'lib/rouge/lexers/dart.rb'
+    - 'lib/rouge/lexers/eiffel.rb'
+    - 'lib/rouge/lexers/elm.rb'
+    - 'lib/rouge/lexers/erlang.rb'
+    - 'lib/rouge/lexers/haskell.rb'
+    - 'lib/rouge/lexers/http.rb'
+    - 'lib/rouge/lexers/idris.rb'
+    - 'lib/rouge/lexers/idris.rb'
+    - 'lib/rouge/lexers/isabelle.rb'
+    - 'lib/rouge/lexers/java.rb'
+    - 'lib/rouge/lexers/jsp.rb'
+    - 'lib/rouge/lexers/kotlin.rb'
+    - 'lib/rouge/lexers/lean.rb'
+    - 'lib/rouge/lexers/magik.rb'
+    - 'lib/rouge/lexers/make.rb'
+    - 'lib/rouge/lexers/mason.rb'
+    - 'lib/rouge/lexers/moonscript.rb'
+    - 'lib/rouge/lexers/mosel.rb'
+    - 'lib/rouge/lexers/nix.rb'
+    - 'lib/rouge/lexers/p4.rb'
+    - 'lib/rouge/lexers/pascal.rb'
+    - 'lib/rouge/lexers/perl.rb'
+    - 'lib/rouge/lexers/postscript.rb'
+    - 'lib/rouge/lexers/python.rb'
+    - 'lib/rouge/lexers/r.rb'
+    - 'lib/rouge/lexers/ruby.rb'
+    - 'lib/rouge/lexers/rust.rb'
+    - 'lib/rouge/lexers/scala.rb'
+    - 'lib/rouge/lexers/sml.rb'
+    - 'lib/rouge/lexers/stata.rb'
+    - 'lib/rouge/lexers/vala.rb'
+    - 'lib/rouge/lexers/wollok.rb'
+    - 'lib/rouge/lexers/xojo.rb'
